# etutor

./: .gitignore  LICENSE  Makefile.am  README.md  build.gradle  configure.ac  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
include/: Makefile.am
include/lucida/: call.h  path_ops.h  refcount.h  request_builder.h  service_acceptor.h  service_connector.h  service_names.h
qna/: build.gradle  gradlew
qna/OpenEphyra/: .gitignore  build.gradle
qna/OpenEphyra/src/info/ephyra/answerselection/filters/: AnswerPatternFilter.java  NumberOfKeywordsFilter.java  StopwordFilter.java  TruncationFilter.java
qna/OpenEphyra/src/info/ephyra/nlp/: LingPipe.java  OpenNLP.java
qna/OpenEphyra/src/info/ephyra/questionanalysis/atype/: FocusFinder.java  WordNetAnswerTypeMapping.java
qna/OpenEphyra/src/info/ephyra/questionanalysis/atype/extractor/: EnglishFeatureExtractor.java
qna/src/main/java/ai/lucida/openephyra/: KnowledgeBase.java  QADaemon.java  QAServiceHandler.java
qna/src/test/java/ai/lucida/openephyra/: QAClient.java  QADaemonTest.java
qna/src/test/java/ai/lucida/qa/: QAClient.java
scripts/: autogen.sh  caffe_cxxflags.sh  guidgen.sh  pygrep.py  start_server.sh  stop_server.sh
site/: Makefile  app.py  start_server.sh  stop_server.sh
site/controllers/: ThriftClient.py
src/main/cpp/lucida/: .gitignore  Makefile.am  request_builder.cpp  service_acceptor.cpp  service_connector.cpp  service_names.cpp
src/main/cpp/lucida/utils/: path_ops.cpp
src/main/java/ai/lucida/grpc/: ServiceAcceptor.java  ServiceConnector.java  ServiceNames.java
src/main/java/ai/lucida/openephyra/: QADaemon.java
src/main/proto/: lucida_service.proto
src/openephyra/: settings.gradle
src/test/cpp/lucida/: .gitignore  Makefile.am  client_server.cpp  handler.cpp  handler.h
src/test/cpp/lucida/utils/: path_test.cpp
src/test/java/ai/lucida/grpc/: ServiceTest.java
